--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -464,7 +464,15 @@ Visibility is represented, in the DSpace reasoner, as a single Prolog rule. The 
            topology(ViewSpace, SurroundingStructs).
 \end{verbatim}
 
-The visibility attribute can be used to check if an architectural structure or interior design element is visible from a given viewpoint. For example, an architect might want to ensure that a certain staircase is visible from the main entrance because she doesn't want the staircase to go unnoticed. Figure XXX shows ....  
+The visibility attribute can be used to check if an architectural structure or interior design element is visible from a given viewpoint. For example, an architect might want to ensure that a certain staircase is visible from the main entrance because she doesn't want the staircase to go unnoticed. Figure \ref{visibility-door-stair} shows and example floor plan where the stairway is not visible from the doorway. In this example both the wall in red and column are obstructing the view from the doorway. 
+
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=80mm]{visibility-stair-door}
+\caption{Visibility Example: Doorway and Stairs}
+\label{visibility-door-stair}
+\end{figure}
 
 
 \subsection{Alignment / Symmetry}
